<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 The CyanogenMod Project (DvTonder)
    Copyright (C) 2016 Benoit Touchette

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <header
        custom:id="@+id/preferences_cat1"
        custom:fragment="com.draekko.traypreferencesapp.CategoryOnePreferences"
        custom:icon="@mipmap/category_one_preferences"
        custom:title="@string/category_one" />

    <header
        custom:id="@+id/preferences_advanced_section"
        custom:fragment="com.draekko.traypreferencesapp.AdvancedPreferences"
        custom:icon="@mipmap/advanced_preferences"
        custom:title="@string/advanced"/>

    <header
        custom:id="@+id/preferences_about_section"
        custom:key="about"
        custom:icon="@mipmap/about_preferences"
        custom:title="@string/about">
        <intent android:targetPackage="com.draekko.traypreferencesapp"
            android:targetClass="com.draekko.traypreferencesapp.About" />
    </header>

</preference-headers>
